# Olfactory_Visualizer

./: .gitignore  check_data.py  check_filenames.py  connect.py  pyproject.toml  requirements.txt  serve.py
Website/: index.html  styles.css
Website with upload cap/: main.js
code/: __init__.py
code/api/: deps.py  main.py  routes_data.py  routes_uploads.py  scrna.py
code/capstone.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
code/database/: connect.py  diagnose_db.py  etl.py  ingest_upload.py  init_db.py  schema.sql
code/database/etl/: bids.py  counts.py
code/src/: __init__.py
code/src/conversion/: __init__.py  config_map.py  convert_to_zarr.py
code/web/: index.html  main.js  styles.css  viewer.html
code/web/Website/: main.js
code/web/Website with upload cap/: index.html  styles.css
tests/: conftest.py  test_etl_bids.py  test_etl_smoke.py
